tests/paczka1/fuzzy1/97823867.err
Error in line 20: Q66VMh6oax S482 0,4
Error in line 13: Fyj A886 79,4
Error in line 27: dEo S775 79,9
Error in line 32: Fyj S775 5!,6
Error in line 26: Fyj S833 68,9
Error in line 29: dEo A886 4,1
